--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,49 @@
 @import "https://style-ship.netlify.app/styles/main.css";
 
+/*************** Home Page CSS ***************/
+
+.home-page-wrapper{
+  padding: 2rem 2.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 90vh;
+}
+
+.home-page-branding-images{
+  display: flex;
+  justify-content: center;
+}
+
+.home-page-branding-images > img {
+  width: 350px;
+}
+
+.home-page-content{
+  width: 70vw;
+}
+
+.home-page-content-title{
+  text-align: center;
+  color: var(--primary-color);
+  font-size: 24px;
+  line-height: 36px;
+  font-weight: bold;
+  letter-spacing: 2px;
+}
+
+.home-page-content-description{
+  font-size: 16px;
+  line-height: 18px;
+  text-align: center;
+}
+
+.home-page-content-cta{
+  display: flex;
+  justify-content: center;
+}
+
 /*************** Wishlist Page CSS ***************/
 
 .wishlist-page-wrapper {
@@ -30,7 +74,8 @@
   justify-content: center;
   width: 100%;
   align-items: center;
-  width: 100%
+  width: 100%;
+  height: 90vh;
 }
 
 .auth-container {
